2005-02-18  Richard Hult  <richard@imendio.com>

	* configure.in: Bump for a pre-release.

	* data/glade/task-dialog.glade: Change the work/duration
	spinbuttons to entries.
	
	* src/planner-format.c: (planner_format_duration_with_day_length),
	(planner_format_duration): Move here from the task tree and make
	more general.
 
	* src/planner-gantt-print.c:
	* src/planner-gantt-row.c:
	* src/planner-project-properties.c:
	* src/planner-resource-view.c:
	* src/planner-task-tree.c:
	* src/planner-ttable-row.c: Update for the above change.

	* src/planner-task-dialog.c: Change the work/duration spinbuttons
	to entries and add duration parsing like the tree views has.
	
2005-02-18  Richard Hult  <richard@imendio.com>

	* src/planner-sql-plugin.c (check_database_tables): Don't g_free,
	g_object_unref.

	* configure.in: Bump version for a pre-release.

	* src/planner-task-tree.c: (task_cmd_move_undo), (task_cmd_move):
	Restore the task type of the parent on undo.
	(task_cmd_move): Initialize variable.

	* libplanner/mrp-task.c: (imrp_task_reattach),
	(imrp_task_insert_child): Make milestone tasks into normal ones
	when then get child tasks, fixes bug #154253.

2005-02-18  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c: (task_tree_duration_data_func): Make
	the duration column only editable for fixed duration tasks.

	* src/planner-task-view.c: (get_widget): Add duration column to
	the task view. Fixes bug #151761.

	* src/planner-task-view.c: Fix typo in critical path menu item.

	* libplanner/mrp-old-xml.c (old_xml_read_task): Silently correct
	milestone tasks with children to normal tasks. Fixes bug #166424.
 
	* libplanner/mrp-task.c: (mrp_task_get_prev_sibling): Implement.

	* src/planner-task-tree.c: (task_cmd_move_undo),
	(task_cmd_move_free), (task_cmd_move),
	(planner_task_tree_unindent_task): Fix the behavior of undo/redo
	of indenting tasks. Fixes bug #158973 and more.
	
	* src/planner-window.c (window_do_save_as): Make "yes" the default.
